--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lógica de programação</title>
-    <script src="./script.js"></script>
+    
 </head>
 <body>
     <h1>Lógica de programação</h1>
-    <p>Página da lógica de programação</p>
+    <p>Descrição da página</p>
+    <script src="./script.js"></script>
 </body>
 </html>
