programando urna eletronia

--- a/urnaEletronicaa/index.html
+++ b/urnaEletronicaa/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/urna.css"
+    <link rel="stylesheet" href="./css/urna.css">
+    <img src="./candidato-darth-vader.jpg" alt="foto do candidato candidato-darth-vader">
+    <img src="./imagens/candidato-spock.jpg" alt="foto do candidadto candidato-spock">
+    <img src="./imagens/candidata-princesa -Kitana.jpg" alt="foto do candidadto candidata-princesa">
+
 </head>
 
 <body>
     <div class="base">
         <div class="urna">
             <div class="tela">
-                <div class="visor" style=""
+                <div class="visor" style=""></div>
                     <div>
                         <h2>
                             Números para votar: 8, 14, 71
@@ -37,7 +41,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="visor-confirmacao" style="display: none;"
+                <div class="visor-confirmacao" style="display: none;"></div>
                     <div>
                         <h1>
                             Obrigado por votar, você votou em BRANCO.
@@ -45,7 +49,7 @@
                     </div>
                     <div class="visor-confirmacao-candidato" style="display: none;">
                     </div>
-                    <div class="visorCandidato" style="display: none;"
+                    <div class="visorCandidato" style="display: none;"></div>
                     </div>
                 </div>
                     <div class="teclado">
@@ -53,7 +57,7 @@
                             <img src="" alt="logo da urna">
                             <h1>Titulo da urna</h1>
                         </div>
-                        <div class="teclado-numerico"
+                        <div class="teclado-numerico"></div>
                             <div id="1" class="botao-numerico">
                                 <span>
                                     1
@@ -106,17 +110,17 @@
                             </div>                    
                         </div>
                         <div class="teclado-de-acoes">
-                            <div id="branco" class="botao-branco"
+                            <div id="branco" class="botao-branco"></div>
                             <span>
                                 BRANCO
                             </span>
                         </div>
-                        <div id="corrige" class="corrige"
+                        <div id="corrige" class="corrige"></div>
                             <span>
                                 CORRIGE
                             </span>
                         </div>
-                        <div id="confirma" class="confirma"
+                        <div id="confirma" class="confirma"></div>
                             <span>
                                 CONFIRMA
                             </span>
