--- a/urnaEletronicaa/index.html
+++ b/urnaEletronicaa/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/urna.css">
-    <img src="./candidato-darth-vader.jpg" alt="foto do candidato candidato-darth-vader">
+    <link rel="stylesheet" href="./urna.css">
+    <img src="./imagens/candidato-darth-vader.jpg" alt="foto do candidato candidato-darth-vader">
     <img src="./imagens/candidato-spock.jpg" alt="foto do candidadto candidato-spock">
-    <img src="./imagens/candidata-princesa -Kitana.jpg" alt="foto do candidadto candidata-princesa">
+    <img src="./imagens/candidato-seu-Madruga.jpg" alt="foto do candidato-seu-Madruga">
 
 </head>
 
@@ -16,7 +16,7 @@
     <div class="base">
         <div class="urna">
             <div class="tela">
-                <div class="visor" style=""></div>
+                <div class="visor"style="">
                     <div>
                         <h2>
                             Números para votar: 8, 14, 71
@@ -33,31 +33,27 @@
                         </h1>
                     </div>
                     <div class="caixa-dos-inputs">
-                        <div class="input-do-numero primeiro-numero">
+                        <div class="input-do-numero primeiro-numero"></div>
 
-                        </div>
-                        <div class="input-do-numero segundo-numero">
+                        <div class="input-do-numero segundo-numero"></div>
                 
-                        </div>
                     </div>
                 </div>
-                <div class="visor-confirmacao" style="display: none;"></div>
+                <div class="visor-confirmacao" style="display: none;">
                     <div>
                         <h1>
                             Obrigado por votar, você votou em BRANCO.
                         </h1>
                     </div>
-                    <div class="visor-confirmacao-candidato" style="display: none;">
-                    </div>
+                    <div class="visor-confirmacao-candidato" style="display: none;"></div>
                     <div class="visorCandidato" style="display: none;"></div>
-                    </div>
                 </div>
                     <div class="teclado">
                         <div class="titulo">
                             <img src="" alt="logo da urna">
                             <h1>Titulo da urna</h1>
                         </div>
-                        <div class="teclado-numerico"></div>
+                        <div class="teclado-numerico">
                             <div id="1" class="botao-numerico">
                                 <span>
                                     1
@@ -110,18 +106,18 @@
                             </div>                    
                         </div>
                         <div class="teclado-de-acoes">
-                            <div id="branco" class="botao-branco"></div>
-                            <span>
+                            <div id="branco" class="botao-branco">
+                            <span class="botao-acao">
                                 BRANCO
                             </span>
                         </div>
-                        <div id="corrige" class="corrige"></div>
-                            <span>
+                        <div id="corrige" class="botao-corrige">
+                            <span class="botao-acao">
                                 CORRIGE
                             </span>
                         </div>
-                        <div id="confirma" class="confirma"></div>
-                            <span>
+                        <div id="confirma" class="botao-confirma">
+                            <span class="botao-acao">
                                 CONFIRMA
                             </span>
                         </div>
